Fix cursor overflow and challenges styles

--- a/styles/elements/display.styl
+++ b/styles/elements/display.styl
@@ -8,6 +8,7 @@ display
         width 100%
         padding-top 100%
         position relative
+        overflow hidden
 
         .padded
             absolute-cover()
