--- a/styles/views/challenges.styl
+++ b/styles/views/challenges.styl
@@ -62,7 +62,7 @@
                             content '\e615'
 
                     .cover
-                        opacity 1
+                        opacity .5
 
                 &.completed h5
                     opacity 1
